test: add coverage reporting for server (Jest) and client (Vitest)
- server (Jest)
  - add coverage config (collectCoverageFrom, coverageDirectory, reporters) in jest.config.js
  - add scripts: test:coverage and test:ci:coverage in package.json
- client (Vitest)
  - add vitest.config.js with v8 coverage provider and reporters (text, html, lcov)
  - add script: test:coverage in package.json
  - add dev dependency: @vitest/coverage-v8
  - fix App.test.jsx to import React to avoid ReferenceError in tests
- docker/test infra
  - add server/Dockerfile.test to include devDependencies (cross-env, jest) for test runs
  - update docker-compose: use Dockerfile.test for api-test, add db healthcheck and depends_on conditions
  - update server/.dockerignore to include src/tests in test image

Enables generating non-interactive coverage reports:
- server: USE_SQLITE_TEST=1 npm run test:coverage
- client: npm run test:coverage -- --run

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon src/server.js",
     "lint": "eslint .",
     "test": "jest --runInBand",
+    "test:coverage": "jest --coverage --runInBand",
     "test:ci": "cross-env NODE_ENV=test jest --ci --runInBand",
+    "test:ci:coverage": "cross-env NODE_ENV=test jest --ci --coverage --runInBand",
     "db:create": "sequelize db:create",
     "db:migrate": "sequelize db:migrate",
     "db:migrate:undo": "sequelize db:migrate:undo:all",
