--- a/client/package.json
+++ b/client/package.json
@@ -6,20 +6,22 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest --environment jsdom"
+    "test": "vitest --environment jsdom",
+    "test:coverage": "vitest run --environment jsdom --coverage"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3",
-    "@react-google-maps/api": "^2.20.1"
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
-    "vite": "^5.0.8",
-    "vitest": "^0.34.6",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.4"
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^0.34.6",
+    "vite": "^5.0.8",
+    "vitest": "^0.34.6"
   }
 }
