chore(docker, client): enable local testing by passing Vite envs at build time
- client/Dockerfile: add build args (VITE_API_URL, VITE_GOOGLE_MAPS_API_KEY) and export to ENV before build
- docker-compose.yml: update web service to pass VITE_API_URL=http://localhost:3000 and VITE_GOOGLE_MAPS_API_KEY from .env
- Allows frontend to reach local API and load Google Maps during dockerized local runs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,11 @@ services:
       - "3000:3000"
 
   web:
-    build: ./client
+    build:
+      context: ./client
+      args:
+        VITE_API_URL: http://localhost:3000
+        VITE_GOOGLE_MAPS_API_KEY: ${VITE_GOOGLE_MAPS_API_KEY:-}
     container_name: soundreviews-web
     depends_on:
       api:
