Add changes for the live demo
Added sample data, but it seems not to be seeding correctly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       DB_USER: postgres
       DB_PASSWORD: postgres
       JWT_SECRET: changeme
+      AUTO_SYNC_ON_DEV: "1"
+      SEED_ON_START: "1"
     ports:
       - "3000:3000"
 
